2006-10-19  Titus Brown  <t@localhost.localdomain>

	* Updated mechanize & ClientForm to svn latest.

2006-10-17  Titus Brown  <t@localhost.localdomain>

	* Fix to BS parsing problem (?)

2006-10-16  Titus Brown  <t@localhost.localdomain>

	* Changed assertions in test-broken-html.py to refer to tidy.

	* Put a pkg_resources.require('dnspython>=1.4') in for test-dns.py

2006-10-15  Titus Brown  <t@vallista.idyll.org>

	* Switched over to using pkg_resources.require for quixote version
	  require/check.

	* Fixed DNS tests with fake idyll.org hosts (Alex Martelli)

2006-09-20  Titus Brown  <t@issola.caltech.edu>

	* Bumped version to 0.9.

	* Switched references to urllib2 over to mechanize, per JJL.

2006-07-12  Titus Brown  <t@issola.caltech.edu>

	* removed ClientCookie dependencies

2006-07-09  Titus Brown  <t@issola.caltech.edu>

	* Updated gather code to properly deal with lexical ordering in
	  directory hierarchies.

	* Finished fixing up the HTML processing code to the latest mechanize.

2006-07-07  Titus Brown  <t@issola.caltech.edu>

	* added newline '\n' processing in arguments.  still need to test.

	* added utils.gather_files to gather script files from subdirectories.

2006-06-19  Titus Brown  <t@issola.caltech.edu>

	* Fixed name server change in test-dns.twill.

	* Fixed __match__ info in docs.

2006-06-04  Titus Brown  <t@issola.caltech.edu>

	* RELEASE 0.8.5.

2006-05-19  Titus Brown  <t@issola.caltech.edu>

	* Added 'formfill' extension module, tests, & docs. (Ben Bangert)

	* 'debug' now takes boolean (+/-) arguments, too.

2006-05-17  Titus Brown  <t@issola.caltech.edu>

	* Bumped version number.

	* Explicitly str-ified form/field names.  (Sebastien Pierre)

	* Added path mangling issue to 'known problems'.

	* Modified 'extend_with' import command to also print out
	  location of imported module.

	* Fixed unnecessary path mangling that introduced the package
	  directory into sys.path; associated check_links idiocy.
	  (Herve Cauwelier)
